src/objects/BudgetVersion__c.object
<CustomObject>
    <fields>
        <fullName>ApprovedCost__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Approved Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ApprovedRevenue__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Approved Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BudgetVersionDescription__c</fullName>
        <label>Budget Version Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BudgetVersionName__c</fullName>
        <label>Budget Version Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ForecastedCost__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Forecasted Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ForecastedRevenue__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Forecasted Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Project</label>
        <referenceTo>pse__Proj__c</referenceTo>
        <relationshipLabel>Budget Versions</relationshipLabel>
        <relationshipName>BudgetVersions</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Estimate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Forecast</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exclude</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>VersionNumber__c</fullName>
        <label>Version Number</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Budget Version</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>BV-{00000000}</displayFormat>
        <label>Budget Version Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Budget Versions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>